--- a/powerbi-docs/guided-learning/powerbiandexcel.yml
+++ b/powerbi-docs/guided-learning/powerbiandexcel.yml
@@ -6,7 +6,7 @@ metadata:
   audience: Business User
   level: Beginner
   nextTutorialHref: publishingandsharing
-  nextTutorialTitle: Publishing and sharing
+  nextTutorialTitle: "Publicación y uso compartido"
   displayType: one-column
   author: davidiseminger
   manager: kfile
@@ -15,14 +15,14 @@ metadata:
   ms.date: 12/05/2017
   ms.author: davidi
   ms.openlocfilehash: cc4e7ae228222e696c481c53a2d4f87b8ed1a146
-  ms.sourcegitcommit: 1791b8f10332c680a1552d5361a6e01b75091385
+  ms.sourcegitcommit: 7bf22bb1136fdb0f962422e16e837187f090827c
   ms.translationtype: HT
   ms.contentlocale: es-ES
-  ms.lasthandoff: 12/12/2017
+  ms.lasthandoff: 02/06/2018
 items:
 - durationInMinutes: 1
   content: >
-    Use Excel and Power BI together and create powerful, connected reports and visuals.
+    Use Excel y Power BI de forma conjunta y cree objetos visuales e informes eficaces y conectados.
 - title: "Introducción al uso de datos de Excel en Power BI"
   durationInMinutes: 2
   content: >
@@ -58,4 +58,4 @@ items:
 
 
     [!INCLUDE [](includes/5-8-excel-data-summary.md)]
-- content: "Nice job completing the **Power BI and Excel** section of Power BI Guided learning. Next, you learn about publishing and sharing.\0"
+- content: "Ha completado la sección **Power BI y Excel** del curso de Aprendizaje guiado de Power BI. Ahora, aprenderá a publicar y compartir.\0"
