--- a/powerbi-docs/guided-learning/publishingandsharing.yml
+++ b/powerbi-docs/guided-learning/publishingandsharing.yml
@@ -6,7 +6,7 @@ metadata:
   audience: Business User
   level: Beginner
   nextTutorialHref: introductiontodax
-  nextTutorialTitle: Introduction to DAX
+  nextTutorialTitle: "Introducción a DAX"
   displayType: one-column
   author: davidiseminger
   manager: kfile
@@ -15,14 +15,13 @@ metadata:
   ms.date: 12/06/2017
   ms.author: davidi
   ms.openlocfilehash: cc8560f56cba1f8bb0dc3d7faedf44433318288b
-  ms.sourcegitcommit: 1791b8f10332c680a1552d5361a6e01b75091385
+  ms.sourcegitcommit: 7bf22bb1136fdb0f962422e16e837187f090827c
   ms.translationtype: HT
   ms.contentlocale: es-ES
-  ms.lasthandoff: 12/12/2017
+  ms.lasthandoff: 02/06/2018
 items:
 - durationInMinutes: 1
-  content: >
-    Data is most powerful when shared with others - learn how to publish, export, share, and distribute your Power BI data insights.
+  content: "Los datos son más eficaces cuando se comparten con otros. Aprenda a publicar, exportar, compartir y distribuir sus análisis de datos de Power BI.\n"
 - title: "Introducción a los paquetes de contenido, la seguridad y los grupos"
   durationInMinutes: 2
   content: >
@@ -93,7 +92,7 @@ items:
 
 
     [!INCLUDE [](includes/6-4a-integrate-onedrive-for-business.md)]
-- title: Publicar en Web
+- title: Publicar en web
   durationInMinutes: 5
   content: >
     > [!Video https://www.youtube.com/embed/jNPOaLP9hlc?rel=0]
@@ -104,4 +103,4 @@ items:
   durationInMinutes: 4
   content: >
     [!INCLUDE [](includes/6-5-guided-learning-completion.md)]
-- content: "You've completed the **Publishing and sharing** section of Power BI Guided Learning. If you want an introduction to DAX, the language used to create Power BI queries, head to the next tutorial.\0"
+- content: "Ha completado la sección **Publicación y uso compartido** del curso de Aprendizaje guiado de Power BI. Si desea una introducción a DAX, el lenguaje usado para crear consultas de Power BI, continúe en el siguiente tutorial.\0"
