--- a/powerbi-docs/guided-learning/exploringdata.yml
+++ b/powerbi-docs/guided-learning/exploringdata.yml
@@ -6,7 +6,7 @@ metadata:
   audience: Business User
   level: Beginner
   nextTutorialHref: powerbiandexcel
-  nextTutorialTitle: Power BI and Excel
+  nextTutorialTitle: Power BI y Excel
   displayType: one-column
   author: davidiseminger
   manager: kfile
@@ -15,14 +15,13 @@ metadata:
   ms.date: 12/05/2017
   ms.author: davidi
   ms.openlocfilehash: aa974a0f3448efde8a4410fabcf0e4f78a5050fd
-  ms.sourcegitcommit: 1791b8f10332c680a1552d5361a6e01b75091385
+  ms.sourcegitcommit: 7bf22bb1136fdb0f962422e16e837187f090827c
   ms.translationtype: HT
   ms.contentlocale: es-ES
-  ms.lasthandoff: 12/12/2017
+  ms.lasthandoff: 02/06/2018
 items:
 - durationInMinutes: 1
-  content: >
-    Welcome to the **exploring data** tutorial. Here you'll learn how to find, connect to, and interact with data in Power BI.
+  content: "Le damos la bienvenida al tutorial de **exploración de los datos**. Aprenderá a buscar datos y a conectarse e interactuar con ellos en Power BI.\n"
 - title: "Introducción al servicio Power BI"
   durationInMinutes: 2
   content: >
@@ -93,4 +92,4 @@ items:
 
 
     [!INCLUDE [](includes/4-6-install-configure-personal-gateway.md)]
-- content: "This **exploring data** section of Guided Learning has prepared you to work with all sorts of different data types. In the next tutorial, you learn how to use a common data source - Excel.\0"
+- content: "Esta sección de **exploración de los datos** del curso de Aprendizaje guiado le ha preparado para trabajar con diferentes tipos de datos. En el siguiente tutorial, aprenderá a usar un origen de datos común: Excel.\0"
