--- a/powerbi-docs/guided-learning/visualizations.yml
+++ b/powerbi-docs/guided-learning/visualizations.yml
@@ -6,7 +6,7 @@ metadata:
   audience: Business User
   level: Beginner
   nextTutorialHref: exploringdata
-  nextTutorialTitle: Exploring data
+  nextTutorialTitle: "Exploración de datos"
   displayType: one-column
   author: davidiseminger
   manager: kfile
@@ -15,14 +15,13 @@ metadata:
   ms.date: 12/05/2017
   ms.author: davidi
   ms.openlocfilehash: e1492e55e47ea0871f4a07a0cc599570f36cae40
-  ms.sourcegitcommit: 1791b8f10332c680a1552d5361a6e01b75091385
+  ms.sourcegitcommit: 7bf22bb1136fdb0f962422e16e837187f090827c
   ms.translationtype: HT
   ms.contentlocale: es-ES
-  ms.lasthandoff: 12/12/2017
+  ms.lasthandoff: 02/06/2018
 items:
 - durationInMinutes: 1
-  content: >
-    Visualizations bring your data to life, and reveal insights that only compelling and amazing visual representations can. This section of **Power BI** Guided Learning shows you how to get started using them.
+  content: "Las visualizaciones dan vida a los datos y revelan una información que solo la pueden revelar unas increíbles y sorprendentes representaciones de objetos visuales. En esta sección del curso de Aprendizaje Guiado de **Power BI** se muestra cómo comenzar a usarlos.\n"
 - title: "Introducción a los objetos visuales en Power BI"
   durationInMinutes: 2
   content: >
@@ -156,4 +155,4 @@ items:
 
 
     [!INCLUDE [](includes/3-11h-r-visual-integration.md)]
-- content: "Nice work. You've completed the **Visualizations** section of **Guided Learning**, and you're ready for the next tutorial - **Exploring data**.\0"
+- content: "Buen trabajo. Ha finalizado la sección **Visualizaciones** del curso de **Aprendizaje guiado** y ya está preparado para el siguiente tutorial: **Exploración de los datos**.\0"
