--- a/powerbi-docs/TOC.yml
+++ b/powerbi-docs/TOC.yml
@@ -398,6 +398,8 @@
           href: power-bi-visualization-best-practices.md
         - name: Visualizaciones personalizadas en Power BI
           href: power-bi-custom-visuals.md
+        - name: Objetos visuales personalizados para organizaciones en Power BI
+          href: power-bi-custom-visuals-organization.md
         - name: 'Tutorial: Parte I, Incorporación de visualizaciones a un informe de Power BI'
           href: power-bi-report-add-visualizations-i.md
         - name: 'Tutorial: Parte II, Incorporación de visualizaciones a un informe de Power BI'
@@ -730,6 +732,8 @@
       items:
         - name: Vista de datos en Power BI Desktop
           href: desktop-data-view.md
+        - name: Tablas de datos en Power BI Desktop
+          href: desktop-date-tables.md
         - name: Vista de relaciones en Power BI Desktop
           href: desktop-relationship-view.md
         - name: Crear y administrar relaciones en Power BI Desktop
@@ -758,8 +762,12 @@
           href: desktop-qna-in-reports.md
         - name: Panel de análisis en Power BI Desktop
           href: desktop-analytics-pane.md
+        - name: Selección múltiple en Power BI
+          href: desktop-multi-select.md
         - name: Uso de Insights en Power BI Desktop
           href: desktop-insights.md
+        - name: Segmentación de datos en Power BI Desktop
+          href: desktop-slicers.md
         - name: Marcadores en Power BI
           href: desktop-bookmarks.md
         - name: Uso de temas de informes
