Commit translated content

--- a/powerbi-docs/TOC.yml
+++ b/powerbi-docs/TOC.yml
@@ -866,7 +866,7 @@
           href: mobile-reports-in-the-mobile-apps.md
         - name: Interacción con iconos de las aplicaciones móviles
           href: mobile-tiles-in-the-mobile-apps.md
-        - name: Compartir un panel desde aplicaciones móviles de Power BI
+        - name: Uso compartido de un panel desde las aplicaciones móviles
           href: mobile-share-dashboard-from-the-mobile-apps.md
         - name: Favoritos en las aplicaciones móviles
           href: mobile-apps-favorites.md
