Commit translated content

--- a/powerbi-docs/TOC.yml
+++ b/powerbi-docs/TOC.yml
@@ -862,6 +862,8 @@
       items:
         - name: Aplicaciones Power BI para iOS
           href: mobile-ios-ipad-iphone-apps.md
+        - name: Power BI para Mixed Reality
+          href: mobile-mixed-reality-app.md
         - name: Ver los informes locales y los KPI en las aplicaciones móviles
           href: mobile-app-ssrs-kpis-mobile-on-premises-reports.md
         - name: Paneles en las aplicaciones móviles
