Commit translated content

--- a/powerbi-docs/TOC.yml
+++ b/powerbi-docs/TOC.yml
@@ -556,6 +556,10 @@
           href: service-admin-service-free-in-your-organization.md
         - name: Adquisición de Power BI Pro
           href: service-admin-purchasing-power-bi-pro.md
+        - name: Asignación de Power BI Pro
+          href: service-admin-assigning-power-bi-pro-licenses.md
+        - name: Power BI Pro en su organización
+          href: service-admin-power-bi-pro-in-your-organization.md
         - name: Enfoques de gobierno e implementación de Power BI
           href: service-admin-governance.md
         - name: Seguridad de Power BI
